<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iacob_maria_victoria_image_start_quiz"
        android:layout_width="370dp"
        android:layout_height="200dp"
        android:contentDescription="@string/start_alt_image"
        android:src="@drawable/quizul" />

    <TextView
        android:id="@+id/iacob_maria_victoria_tv_start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_background"
        android:elevation="4dp"
        android:padding="10dp"
        android:text="@string/text_start_quiz"
        android:textAlignment="center"
        android:textColor="@color/primary_text_color"
        android:textSize="26sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/iacob_maria_victoria_tv_rules_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/text_background_secondary"
        android:elevation="2dp"
        android:padding="8dp"
        android:text="@string/text_rules_quiz"
        android:textAlignment="center"
        android:textColor="@color/secondary_text_color"
        android:textSize="20sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/iacob_maria_victoria_linear_layout_start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/iacob_maria_victoria_swipe_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/swipe_to_start"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iacob_maria_victoria_swipe_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/alt_arrow"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

</LinearLayout>
