<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:padding="10dp"
    tools:context=".QuizResultActivity">

    <ImageView
        android:id="@+id/iacob_maria_victoria_image_view_result"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="@string/start_alt_image"
        android:src="@drawable/result_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/iacob_maria_victoria_result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/quiz_completed"
        style="@style/LongTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iacob_maria_victoria_image_view_result" />

    <LinearLayout
        android:id="@+id/iacob_maria_victoria_linear_layout_orizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iacob_maria_victoria_result_title">

    <LinearLayout
        android:id="@+id/iacob_maria_victoria_linear_layout_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/iacob_maria_victoria_final_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-bold"
            android:gravity="center_vertical"
            android:text="@string/default_score_text"
            android:textColor="#FF4081"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iacob_maria_victoria_result_title" />

        <TextView
            android:id="@+id/iacob_maria_victoria_correct_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="32dp"
            android:gravity="center_vertical"
            android:text="@string/default_correct_answers_text"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iacob_maria_victoria_final_score" />
    </LinearLayout>
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:layout_weight="1"
            android:src="@drawable/winner_final"/>
    </LinearLayout>

    <Button
        android:id="@+id/iacob_maria_victoria_go_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/btn_back_to_home"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
