<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AboutQuizFragment">

    <TextView
        android:id="@+id/iacob_maria_victoria_quiz_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textColor="#3E4EB8"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="56dp"
        android:letterSpacing="0.1"/>

    <ImageView
        android:id="@+id/iacob_maria_victoria_about_quiz_icon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/start_alt_image"
        android:src="@drawable/arta1"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/iacob_maria_victoria_quiz_app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/iacob_maria_victoria_quiz_info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about_quiz_info"
        android:textColor="#333333"
        android:textSize="16sp"
        android:lineSpacingExtra="8sp"
        android:background="@drawable/text_background_secondary"
        android:letterSpacing="0.02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iacob_maria_victoria_about_quiz_icon"
        android:layout_marginTop="40dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <ImageView
        android:id="@+id/iacob_maria_victoria_about_quiz_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/start_alt_image"
        android:src="@drawable/track_of_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>